<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_bottom_menu">
    <item
        android:id="@+id/dailyTabLayout"
        android:enabled="true"
        android:icon="@drawable/ic_daily_bottom"
        android:title="@string/daily_weather" />
    <item
        android:id="@+id/hourlyTabLayout"
        android:enabled="true"
        android:icon="@drawable/ic_hourly_bottom"
        android:title="@string/hourly_weather" />
    <item
        android:id="@+id/findCityFragment"
        android:enabled="true"
        android:icon="@drawable/ic_find_sity_bottom"
        android:title="@string/find_city" />
    <item
        android:id="@+id/settingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_setting_vidget_bottom"
        android:title="@string/setting_vidget" />
    </group>
</menu>